<resources>
    <string name="app_name">Trader Joes</string>

    <!--Common strings-->
    <string name="back">Back</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--Main Activity-->
    <string name="log_in">Log In</string>
    <string name="logo_alt_text">Trader Joe\'s logo</string>
    <string name="google_login">Continue with Google</string>
    <string name="create_account">Create Account</string>
    <string name="terms_n_condition">
        By tapping Continue or Create Account, I agree to Trader Joe\'s <a href="">Terms of Service</a>, <a href="">Payments Terms of Service</a>, <a href="">Privacy Policy</a>, and <a href="">Non-discrimination Policy</a>.
    </string>
    <string name="signing_out_extra">SIGNED_OUT</string>
    <string name="sign_out_msg">You have been signed out.</string>

    <!--Login Activity-->
    <string name="username_hint">Enter your email</string>
    <string name="password_hint">Enter password</string>
    <string name="invalid_creds">Invalid credentials.</string>
    <string name="need_help">Need help logging in?</string>

    <!--Signup Activity-->
    <string name="signup_email_hint">Enter an email</string>
    <string name="signup_password_hint">Enter a password</string>
    <string name="signup_confirm_password_hint">Confirm password</string>
    <string name="passwords_dont_match">Passwords must match.</string>
    <string name="invalid_email">Please enter a valid email.</string>
    <string name="signup">Create account</string>

    <!--Navigation drawer-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!--Product view-->
    <string name="add_to_cart">Add to cart</string>
    <string name="view_cart_floating_btn">View cart</string>
    <string name="leave_a_review"><i>Leave a review</i></string>
    <string name="submit_review">Submit review</string>
    <string name="review_placeholder"><i>Write a review...</i></string>

    <!--Cart view-->
    <string name="your_cart">Shopping Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="cardholder_name">Cardholder\'s name</string>
    <string name="card_num">Card number</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_card_num">Invalid card number</string>
    <string name="invalid_date">Invalid date</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="back_to_cart">Back to cart</string>

    <!--Order confirmation page-->
    <string name="order_confirmed">Order confirmed</string>
    <string name="order_confirmation_text">Your order has been placed. Your confirmation number is: </string>

    <!--Account page-->
    <string name="personal_info">Personal info</string>
    <string name="payment_info">Payment info</string>
    <string name="no_payment_info_msg">No saved cards.</string>
    <string name="display_name">Name:</string>
    <string name="display_email">Email:</string>
    <string name="save">Save</string>

    <!--Find a store-->
    <string name="zip">Enter a ZIP code...</string>
    <string name="search">Search</string>

    <!--Order history-->
    <string name="your_orders">Your orders</string>
</resources>