<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CartFragment"
    android:id="@+id/cart_layout">

    <RelativeLayout
        android:id="@+id/cart_head_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/cart_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_cart"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/tj_red_primary"
            android:layout_marginBottom="2dp"/>


        <TextView
            android:id="@+id/total_items"
            android:layout_below="@+id/cart_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2 items"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/subtotal_heading"
            android:layout_below="@+id/total_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/subtotal_amount"
            android:layout_toRightOf="@+id/subtotal_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/total_items"
            android:text="$99.99"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceed_to_checkout_btn"
            android:layout_below="@id/subtotal_heading"
            android:text="@string/proceed_to_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/Widget.Material3.Button"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_shopping_btn"
            android:layout_below="@id/proceed_to_checkout_btn"
            android:text="@string/continue_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:textSize="16sp"
            app:strokeColor="@color/tj_red_primary"/>

        <View
            android:id="@+id/header_divider"
            android:layout_below="@+id/continue_shopping_btn"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>

    <include
        android:id="@+id/payment_layout"
        android:layout_below="@id/cart_head_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        layout="@layout/payment_input_view"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_payment"
        android:layout_below="@id/payment_layout"
        android:text="@string/confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        style="@style/Widget.Material3.Button"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_to_cart"
        android:layout_below="@id/confirm_payment"
        android:text="@string/back_to_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:strokeColor="@color/tj_red_primary"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_below="@+id/back_to_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/cart_list_item"/>

</RelativeLayout>