<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderConfirmationFragment"
    android:id="@+id/order_confirmation_layout">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/order_confirmation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_confirmed"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/tj_red_primary"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/confirmation_text"
            android:layout_below="@id/order_confirmation_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_confirmation_text"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/confirmation_number"
            android:layout_below="@id/confirmation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#1234567"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continue_shopping_btn"
            android:layout_below="@id/confirmation_number"
            android:text="@string/continue_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/Widget.Material3.Button"
            android:textSize="16sp"/>
    </RelativeLayout>


</RelativeLayout>