<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment"
    android:layout_margin="20dp"
    android:id="@+id/account_mgmt_layout">

    <FrameLayout
        android:id="@+id/image_layout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_gravity="bottom|center_horizontal"
            app:srcCompat="@drawable/profile_pic_placeholder"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.IconButton"
            app:icon="@drawable/add_a_photo_solid"
            app:strokeColor="@color/tj_red_primary"
            app:iconSize="40dp"
            android:layout_gravity="top|right"/>
    </FrameLayout>

    <View
        android:id="@+id/header_divider"
        android:layout_below="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/personal_info_header"
        android:layout_below="@+id/header_divider"
        android:text="@string/personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/tj_red_primary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_personal_info_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_below="@+id/header_divider"
        android:layout_toRightOf="@id/personal_info_header"
        app:icon="@drawable/edit_icon" />

    <RelativeLayout
        android:id="@+id/personal_info_layout"
        android:layout_below="@+id/personal_info_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/display_name_label"
            android:text="@string/display_name"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/display_name_value"
            android:text="John Doe"
            android:layout_toRightOf="@id/display_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/display_email_label"
            android:text="@string/display_email"
            android:textStyle="bold"
            android:layout_below="@id/display_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/display_email_value"
            android:text="abc@abc.com"
            android:layout_below="@id/display_name_label"
            android:layout_toRightOf="@id/display_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/edit_personal_info_layout"
        android:layout_below="@+id/personal_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/edit_name_label"
            android:text="@string/display_name"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_value"
            android:layout_below="@id/edit_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/edit_email_label"
            android:text="@string/display_email"
            android:textStyle="bold"
            android:layout_below="@id/edit_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email_value"
            android:layout_below="@id/edit_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_personal_info_btn"
            android:layout_below="@id/edit_email_value"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/Widget.Material3.Button"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_personal_info_btn"
            android:layout_below="@id/save_personal_info_btn"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            style="@style/Widget.Material3.Button.OutlinedButton"
            app:strokeColor="@color/tj_red_primary"
            android:textSize="16sp"/>
    </RelativeLayout>

    <View
        android:id="@+id/header_divider_2"
        android:layout_below="@+id/edit_personal_info_layout"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/payment_info_layout"
        android:layout_below="@+id/header_divider_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/payment_info_header"
            android:text="@string/payment_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/tj_red_primary"/>

        <TextView
            android:id="@+id/no_payment_info_msg"
            android:layout_below="@+id/payment_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_payment_info_msg"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>

</RelativeLayout>